# flash-moe

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/: auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.yml  feature_support.yml  performance_optimization.yml
.github/workflows/: manual_publish.yml
docs/: flash_expert.md  flash_router.md
flash_moe/modules/: flash_moe.py
flash_moe/ops/: flash_expert.py  flash_mlp.py  flash_router.py  utils.py
flash_moe/ops/cutile/: dpskmoe.py  flash_mlp.py  gshared.py  peer.py  pkm.py
flash_moe/ops/triton/: dpskmoe.py  flash_expert.py  flash_mlp.py  gshared.py  peer.py  pkm.py
tests/: test_dpskmoe.py  test_expert.py  test_gshared.py  test_mlp.py  test_peer.py  test_pkm.py  test_router.py  testing.py
